apps/frontend/frontend-k3s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lista-presenca-frontend
  namespace: default
  labels:
    app: frontend
spec:
  replicas: 4
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      nodeSelector:
        hardware: pizero
      containers:
      - name: frontend
        image: docker.io/reginaldoraraujo/lista-presenca-frontend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: lista-presenca-frontend
spec:
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 80
